--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-es6-template-engine": "^2.2.1"
+    "express-es6-template-engine": "^2.2.1",
+    "pg-promise": "^10.4.4"
   }
 }
